# Source/BSN.IpTables.Presentation.Dto/V1/InputModels/RuleInputModel.cs
@@ -1,12 +1,13 @@
-﻿using System;
+﻿using Dynamitey;
+using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Text;
 using System.Threading.Tasks;
 
-namespace BSN.IpTables.Presentation.Dto.V1.ViewModels
+namespace BSN.IpTables.Presentation.Dto.V1.InputModels
 {
-    public class IpTablesRuleViewModel
+    public class RuleInputModel
     {
         public string InterfaceName { get; set; }
         public string Protocol { get; set; }
@@ -14,7 +15,14 @@ namespace BSN.IpTables.Presentation.Dto.V1.ViewModels
         public string DestinationIp { get; set; }
         public string SourcePort { get; set; }
         public string DestinationPort { get; set; }
-        public string Target { get; set; }
-        public string Position { get; set; }
+        public string Chain { get; set; }
+
+        public override string ToString()
+        {
+            var builder = new StringBuilder();
+            if (string.IsNullOrEmpty(InterfaceName))
+                builder.Append($"i{InterfaceName}");
+            return $"";
+        }
     }
 }
